--- a/apiregisterpeople/src/main/resources/application.properties
+++ b/apiregisterpeople/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8095
 
-#Opcional
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#Obrig?torio de acordo com o seu banco de dados
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/registerpeople
+spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:10715/railway
+#spring.datasource.url=jdbc:postgresql://localhost:5432/registerpeople
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=EfaeCGG2dabe6BG-dC2-a2DBa*b6c3cb
+#spring.datasource.password=123456
