--- a/apiregisterpeople/src/main/resources/application.properties
+++ b/apiregisterpeople/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=8095
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:10715/railway
+spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:46725/railway
 #spring.datasource.url=jdbc:postgresql://localhost:5432/registerpeople
 spring.datasource.username=postgres
-spring.datasource.password=EfaeCGG2dabe6BG-dC2-a2DBa*b6c3cb
+spring.datasource.password=QgQTunfusFspPwJluzDUAkYFSgFeQxso
 #spring.datasource.password=123456
